[cy] update from Pootle (firefox)

--- a/cy/browser/chrome/browser/devtools/gclicommands.properties
+++ b/cy/browser/chrome/browser/devtools/gclicommands.properties
@@ -22,6 +22,7 @@ helpAvailable=Gorchmynion Sydd ar Gael
 
 # LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
 # is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=Nid yw'r gorchymyn '%1$S' ar gael yn y modd proses lluosog (E10S)
 
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
