--- a/cy/browser/chrome/browser/devtools/timeline.properties
+++ b/cy/browser/chrome/browser/devtools/timeline.properties
@@ -38,6 +38,7 @@ timeline.records=COFNODION
 timeline.label.styles=Arddulliau
 timeline.label.reflow=Ail-lifo
 timeline.label.paint=Paent
+timeline.label.javascript=Javascript
 timeline.label.domevent=Digwyddiad DOM
 timeline.label.consoleTime=Consol
 
@@ -56,3 +57,11 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Cychwyn:
+timeline.markerDetail.end=Diwedd:
+timeline.markerDetail.duration=Hyd:
+timeline.markerDetail.consoleTimerName=Enw'r Amserydd:
+timeline.markerDetail.DOMEventType=Math o Ddigwyddiad:
+timeline.markerDetail.DOMEventPhase=Cyfnod:
+timeline.markerDetail.DOMEventTargetPhase=Targed
+timeline.markerDetail.DOMEventCapturingPhase=Cipio
+timeline.markerDetail.DOMEventBubblingPhase=Byrlymu
