--- a/cy/browser/chrome/browser/loop/loop.properties
+++ b/cy/browser/chrome/browser/loop/loop.properties
@@ -46,6 +46,7 @@ display_name_available_status=Ar Gael
 ## LOCALIZATION NOTE(unable_retrieve_url,session_expired_error_description,could_not_authenticate,password_changed_question,try_again_later,could_not_connect,check_internet_connection,login_expired,service_not_available,problem_accessing_account):
 ## These may be displayed at the top of the panel here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
+unable_retrieve_url=Ymddiheuriadau, nid oedd modd i ni adalw URL galwad.
 session_expired_error_description=Daeth y sesiwn i ben. Ni fydd yr un URL rydych wedi eu creu a'u rhannu yn gweithio, bellach.
 could_not_authenticate=Methu Dilysu
 password_changed_question=A ydych wedi newid eich cyfrinair?
@@ -97,6 +98,7 @@ new_contact_button=Cysylltiad Newydd
 new_contact_name_placeholder=Enw
 new_contact_email_placeholder=E-bost
 new_contact_fxos_phone_placeholder=Ffôn Firefox OS
+new_contact_phone_placeholder2=Ffôn
 
 contacts_blocked_contacts=Cysylltiadau Wedi eu Rhwystro
 
@@ -126,6 +128,8 @@ sync_contacts_button=Cydweddu Cysylltiadau
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Ymddiheuriadau, methodd mewnforio cysylltiadau
+import_failed_description_some=Nid oedd yn bosib mewnforio rhai cysylltiadau
+import_failed_support_button=Cymorth
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +287,7 @@ feedback_rejoin_button=Ailymuno
 ## an abusive user.
 feedback_report_user_button=Adrodd ar y Defnyddiwr
 
+help_label=Cymorth
 tour_label=Cyflwyniad
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
@@ -300,6 +305,8 @@ rooms_list_delete_tooltip=Dileu sgwrs
 rooms_list_deleteConfirmation_label=Ydych chi'n siŵr?
 rooms_list_no_current_conversations=Dim sgyrsiau cyfredol
 rooms_name_this_room_label=Enwi'r sgwrs
+rooms_name_this_room_tooltip2=Cliciwch i olygu enw'r sgwrs
+rooms_name_change_failed_label=Nid oes modd ailenwi'r sgwrs
 rooms_new_room_button_label=Cychwyn sgwrs
 rooms_only_occupant_label=Chi yw'r cyntaf yma.
 rooms_panel_title=Dewiswch sgwrs neu gychwyn un newydd
@@ -308,3 +315,4 @@ rooms_room_full_call_to_action_nonFx_label=Llwythwch {{brandShortname}} i gychwy
 rooms_room_full_call_to_action_label=Dysgu rhagor am {{clientShortname}} »
 rooms_room_joined_label=Mae rhywun wedi ymuno â'r sgwrs!
 rooms_room_join_label=Ymunwch â'r sgwrs
+rooms_signout_alert=Bydd sgyrsiau agored yn cael eu cau
