--- a/cy/dom/chrome/layout/css.properties
+++ b/cy/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=dirlenwad
 PEColorLightnessEOF=ysgafnder
 PEColorOpacityEOF=didreiddedd mewn gwerth lliw
 PEExpectedNumber=Disgwyl rhif ond canfod '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Disgwyl <position> ond canfod '%1$S'.
+PEExpectedRadius=Disgwyl radiws ond canfod '%1$S'.
 PEExpectedCloseParen=Disgwyl ')' ond canfod '%1$S'.
 PEDeclEndEOF=';' neu '}' i gau'r datganiad
 PEParseDeclarationNoColon=Disgwyl ':' ond canfod '%1$S'.
