--- a/cy/security/manager/chrome/pipnss/nsserrors.properties
+++ b/cy/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Cafodd y dystysgrif ei llofnodi gan 
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Mae'r gweinydd yn defnyddio pinio allwedd (HPKP) ond nid oedd modd cynhyrchu cadwyn tystysgrif ymddiriedig sy'n cyd-fynd a'r set pinnau. Nid oes mod gwrthwneud torri pinio allweddi.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Mae'r gweinydd yn defnyddio tystysgrif gydag estyniad cyfyngiadau sylfaenol sy'n ei ddynodi fel yr awdurdod tystysgrifo. Ar gyfer tystysgrifau sydd wedi eu rhyddhau'n briodol, ni ddylai hyn fod yn wir.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Cyflwynodd y gweinydd dystysgrif sydd ag allwedd sy'n rhy fach i greu cysylltiad diogel.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Defnyddiwyd tystysgrif X.509 fersiwn 1 nad yw'n angor ymddiriedaeth i gyhoeddi tystysgrif y wefan. Mae tystysgrifau X.509 fersiwn 1 yn anghymeradwy ac ni ddylent gael eu defnyddio i lofnodi tystysgrifau eraill.
