--- a/cy/security/manager/chrome/pippki/pippki.properties
+++ b/cy/security/manager/chrome/pippki/pippki.properties
@@ -76,8 +76,11 @@ pageInfo_Privacy_None3=Nid yw'r dudalen rydych yn edrych arni wedi ei hamgryptio
 # LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Mae'r Cysylltiad wedi ei Ammgryptio (%1$S, allweddi did %2$S, %3$S)
 pageInfo_Privacy_Encrypted1=Roedd y dudalen rydych yn ei darllen wedi ei hamgryptio cyn cael ei gyrru ar draws y Rhyngrwyd.
+pageInfo_Privacy_Encrypted2=Mae amgryptio yn ei gwneud hi'n anodd iawn i bobl heb eu hawdurdodi ddarllen gwybodaeth sy'n teithio rhwng cyfrifiaduron. Mae felly'n annhebygol iawn bod unrhyw un wedi darllen y dudalen hon wrth iddi deithio ar draws y rhwydwaith.
 pageInfo_MixedContent=Cysylltiad wedi ei Amgryptio'n Rhannol
+pageInfo_Privacy_Broken1=Nid oedd rhannau o'r dudalen rydych yn ei darllen wedi eu hamgryptio neu nid oedd yr amgryptiad yn ddigon cryf cyn eu hanfon dros y Rhyngrwyd.
 
 #Cert Viewer
 certDetails=Gwyliwr Tystysgrif:
@@ -144,12 +147,17 @@ writeFileUnknownError=Gwall anhaysbys
 addExceptionBrandedWarning2=Rydych ar fin atal y ffordd mae %S yn adnabod y wefan.
 addExceptionInvalidHeader=Mae'r wefan yn ceisio dweud pwy ydyw gyda gwybodaeth annilys.
 addExceptionDomainMismatchShort=Gwefan Anghywir
+addExceptionDomainMismatchLong2=Mae'r dystysgrif yn perthyn i wefan gwahanol, sy'n golygu y gall rhywun fod yn efelychu'r wefan hon.
 addExceptionExpiredShort=Hen Wybodaeth
+addExceptionExpiredLong2=Nid yw'r dystysgrif yn ddilys ar hyn o bryd. Gall ei fod wedi cael ei ddwyn neu ei golli, a gall fod yn cael ei ddefnyddio i ymddangos fel y wefan hon.
 addExceptionUnverifiedOrBadSignatureShort=Hunaniaeth Anhysbys
+addExceptionUnverifiedOrBadSignatureLong2=Methu ymddiried yn y dystysgrif am nad yw wedi ei ddilysu gan awdurdod hysbys sy'n defnyddio llofnod diogel.
 addExceptionValidShort=Tystysgrif Dilys
 addExceptionValidLong=Mae'r wefan yn darparu gwybodaeth ddilys amdani ei hun.  Nid oes angen gosod eithriad.
 addExceptionCheckingShort=Gwirio Gwybodaeth
+addExceptionCheckingLong2=Ceisio adnabod y wefan…
 addExceptionNoCertShort=Dim Gwybodaeth ar Gael
+addExceptionNoCertLong2=Methu canfod statws dynodiad ar gyfer y wefan hon.
 addExceptionConnectionFailed=Methodd y Cysylltu
 
 #Certificate Exists in database
