--- a/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/cy/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,11 @@ quit-button.tooltiptext.mac = Gadael %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Cychwyn sgwrs
 
+social-share-button.label = Rhannu'r Dudalen Hon
+social-share-button.tooltiptext = Rhannu'r dudalen hon
 
 panic-button.label = Anghofio
 panic-button.tooltiptext = Anghofio am beth hanes pori
@@ -111,3 +115,4 @@ web-apps-button.tooltiptext = Darganfod Apiau
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Agor WebIDE (%S)
