--- a/cy/webapprt/webapprt/overrides/appstrings.properties
+++ b/cy/webapprt/webapprt/overrides/appstrings.properties
@@ -30,5 +30,6 @@ externalProtocolChkMsg=Cofio'r dewis ar gyfer y pob dolen o'r math yma.
 externalProtocolLaunchBtn=Cychwyn y rhaglen
 malwareBlocked=Mae'r wefan %S wedi ei hysbysu fel gwefan ymosod ac wedi cael ei rwystro yn seiliedig ar y dewisiadau diogelwch.
 phishingBlocked=Mae'n hysbys fod wefan %S yn ffugiad gwe wedi ei llunio i dwyllo defnyddwyr i rannu manylion personol ac ariannol.
+cspBlocked=Mae'r rhaglen wedi ceisio cael mynediad i adnodd sydd â pholisi diogelwch sy'n ei atal rhag cael ei lwytho yn y dull yma.
 corruptedContentError=Nid yw'r rhaglen y gallu parhau i lwytho oherwydd i wall gael ei ganfod wrth drosglwyddo data.
 remoteXUL=Ceisio y rhaglen â defnyddio technoleg nad yw'n cael ei gynnal ac nad yw ar gael bellach.
