--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -63,6 +63,7 @@ retry_button=Tentar de novo
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
 share_button=Email
+share_button2=Enviar link por email
 copy_url_button=Copiar
 copy_url_button2=Copiar link
 copied_url_button=Copiado!
@@ -287,6 +288,7 @@ tour_label=Tour
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
 ## will be replaced by a number. For example "Conversation 1" or "Conversation 12".
+rooms_default_room_name_template=Conversa {{conversationLabel}}
 rooms_leave_button_label=Sair
 rooms_list_copy_url_tooltip=Copiar link
 ## LOCALIZATION NOTE (rooms_list_current_conversations):
@@ -294,8 +296,11 @@ rooms_list_copy_url_tooltip=Copiar link
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
+rooms_list_current_conversations=Conversa atual;Conversas atuais
 rooms_list_delete_tooltip=Excluir conversa
 rooms_list_deleteConfirmation_label=Tem certeza?
+rooms_list_no_current_conversations=Nenhuma conversa atual
+rooms_new_room_button_label=Iniciar uma conversa
 rooms_only_occupant_label=Você é o primeiro aqui.
 rooms_panel_title=Escolha uma conversa ou comece uma nova
 rooms_room_full_label=Já há duas pessoas nesta conversa.
