--- a/cy/mobile/android/chrome/webcompatReporter.properties
+++ b/cy/mobile/android/chrome/webcompatReporter.properties
@@ -4,6 +4,9 @@
 
 # LOCALIZATION NOTE (webcompat.menu.name): A "site issue" is a bug, display,
 # or functionality problem with a webpage in the browser.
+webcompat.menu.name=Adrodd ar Fater Gwefan
 
 # LOCALIZATION NOTE (webcompat.reportDesktopMode.message): A " site issue" is a
 # bug, display, or functionality problem with a webpage in the browser.
+webcompat.reportDesktopMode.message=Adrodd ar fater gwefan?
+webcompat.reportDesktopModeYes.label=Adrodd
