[pt-BR] update from Pootle (firefox)

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -170,6 +170,8 @@ pluginContinueBlocking.label=Continuar bloqueando
 pluginContinueBlocking.accesskey=b
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Permitir…
+pluginActivateTrigger.accesskey=P
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -193,6 +195,8 @@ sanitizeSelectedWarning=Todos os itens selecionados serão limpos.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
+update.downloadAndInstallButton.label=Atualizar para %S
+update.downloadAndInstallButton.accesskey=u
 
 # RSS Pretty Print
 feedShowFeedNew=Inscrever “%S”…
@@ -284,6 +288,7 @@ identity.identified.verified_by_you=Você adicionou uma exceção de segurança 
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=A conexão com este site é segura.
+identity.broken_loaded=A conexão com este website não é totalmente segura, pois contém elementos não criptografados (como imagens) ou a criptografia não é forte o suficiente.
 identity.mixed_active_loaded2=Este site contém conteúdo interativo que não está criptografado (como scripts). Outras pessoas podem interceptar suas informações ou modificar o comportamento do site.
 identity.unencrypted=A conexão com este site não é criptografada.
 
