--- a/pt-BR/browser/chrome/browser/devtools/timeline.properties
+++ b/pt-BR/browser/chrome/browser/devtools/timeline.properties
@@ -35,6 +35,7 @@ timeline.records=RECORDS
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
 timeline.label.styles=Estilos
+timeline.label.paint=Pintar
 timeline.label.domevent=Evento DOM
 timeline.label.consoleTime=Console
 
@@ -53,3 +54,10 @@ timeline.markerDetailFormat=%1$S (%2$S)
 # LOCALIZATION NOTE (time.markerDetail.*):
 # Strings used in the waterfall sidebar.
 timeline.markerDetail.start=Iniciar:
+timeline.markerDetail.end=Fim:
+timeline.markerDetail.duration=Duração:
+timeline.markerDetail.consoleTimerName=Nome do temporizador:
+timeline.markerDetail.DOMEventType=Tipo de evento:
+timeline.markerDetail.DOMEventPhase=Fase:
+timeline.markerDetail.DOMEventTargetPhase=Destino
+timeline.markerDetail.DOMEventCapturingPhase=Capturar
