--- a/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/pt-BR/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ quit-button.tooltiptext.mac = Sair do %1$S (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
+loop-call-button3.label = Hello
 
 
 panic-button.label = Esquecer
@@ -111,3 +112,4 @@ web-apps-button.tooltiptext = Descubra aplicativos
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
 # %S is the keyboard shortcut
 devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Abrir WebIDE (%S)
