--- a/nl/browser/chrome/browser/devtools/gclicommands.properties
+++ b/nl/browser/chrome/browser/devtools/gclicommands.properties
@@ -20,6 +20,10 @@ helpDesc=Hulp krijgen over de beschikbare opdrachten
 # explain the contents of the command help table.
 helpAvailable=Beschikbare opdrachten
 
+# LOCALIZATION NOTE (notAvailableInE10S) Used in the output of any command that
+# is not compatible with multiprocess mode (E10S).
+notAvailableInE10S=De opdracht ‘%1$S’ is niet beschikbaar in multiprocess-modus (E10S)
+
 # LOCALIZATION NOTE (consoleDesc) A very short string used to describe the
 # function of the console command.
 consoleDesc=Opdrachten om de console te beheren
