--- a/nl/browser/chrome/browser/devtools/webide.properties
+++ b/nl/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Kan niet verbinden met app: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Kan de add-onlijst niet ophalen: %S
 
+error_appProjectsLoadFailed=Kan projectenlijst niet laden. Dit kan gebeuren als u dit profiel met een nieuwere versie van Firefox hebt gebruikt.
+
 addons_stable=stabiel
 addons_unstable=onstabiel
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S-simulator (%2$S)
 addons_install_button=installeren
 addons_uninstall_button=de-installeren
 addons_adb_label=ADB Helper-add-on
+addons_adapters_label=Tools Adapters-add-on
 addons_adb_warning=USB-apparaten worden zonder deze add-on niet gedetecteerd
 addons_status_unknown=?
 addons_status_installed=Geïnstalleerd
@@ -71,3 +74,6 @@ status_valid=GELDIG
 status_warning=WAARSCHUWINGEN
 status_error=FOUTEN
 status_unknown=ONBEKEND
+
+# Preferences
+devicepreferences_reset_default=Standaardwaarden
