--- a/nl/browser/chrome/browser/devtools/timeline.properties
+++ b/nl/browser/chrome/browser/devtools/timeline.properties
@@ -38,4 +38,30 @@ timeline.records=OPNAMEN
 timeline.label.styles=Stijlen
 timeline.label.reflow=Reflow
 timeline.label.paint=Paint
+timeline.label.javascript=Javascript
 timeline.label.domevent=DOM-gebeurtenis
+timeline.label.consoleTime=Console
+
+# LOCALIZATION NOTE (graphs.memory):
+# This string is displayed in the memory graph of the Performance tool,
+# as the unit used to memory consumption. This label should be kept
+# AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.memory=MB
+
+# LOCALIZATION NOTE (timeline.markerDetailFormat):
+# Some timeline markers come with details, like a size, a name, a js function.
+# %1$S is replaced with one of the above label (timeline.label.*) and %2$S
+# with the details. For examples: Paint (200x100), or console.time (FOO)
+timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Begin:
+timeline.markerDetail.end=Einde:
+timeline.markerDetail.duration=Duur:
+timeline.markerDetail.consoleTimerName=Timernaam:
+timeline.markerDetail.DOMEventType=Gebeurtenistype:
+timeline.markerDetail.DOMEventPhase=Fase:
+timeline.markerDetail.DOMEventTargetPhase=Doel
+timeline.markerDetail.DOMEventCapturingPhase=Vastleggen
+timeline.markerDetail.DOMEventBubblingPhase=Bubbling
