New strings for Firefox 3:4

--- a/da/browser/chrome/browser/devtools/webide.properties
+++ b/da/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Kan ikke forbinde til app: %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Kan ikke hente tilføjelseslisten: %S
 
+error_appProjectsLoadFailed=Kan ikke indlæse listen over projekter. Dette kan skyldes, at du har brugt denne profil med en nyere version af Firefox.
+
 addons_stable=stabil
 addons_unstable=ustabil
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
@@ -52,6 +54,7 @@ addons_simulator_label=Firefox OS %1$S Simulator (%2$S)
 addons_install_button=installer
 addons_uninstall_button=afinstaller
 addons_adb_label=Tilføjelsen ADB Helper
+addons_adapters_label=Tilføjelsen Tools Adapters
 addons_adb_warning=USB-enheder vil ikke blive fundet uden denne tilføjelse
 addons_status_unknown=?
 addons_status_installed=Installeret
@@ -71,3 +74,6 @@ status_valid=GYLDIG
 status_warning=ADVARSLER
 status_error=FEJL
 status_unknown=UKENDT
+
+# Preferences
+devicepreferences_reset_default=Nulstil til standard
