--- a/da/browser/chrome/browser/loop/loop.properties
+++ b/da/browser/chrome/browser/loop/loop.properties
@@ -126,6 +126,9 @@ sync_contacts_button=Synkroniser kontakter
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Beklager, import af kontakter mislykkedes
+import_failed_description_some=Ikke alle kontakterne kunne importeres
+import_failed_support_button=Hjælp
+
 ## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
 ## fails and the user may need more help. In this item, don't translate the part between
 ## {{..}} because this will be replaced by the label from import_failed_support_link_label.
