New strings for Firefox 4:4

--- a/da/browser/chrome/browser/shellservice.properties
+++ b/da/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = k
 setDefaultBrowserNever.label       = Spørg mig ikke igen
 setDefaultBrowserNever.accesskey   = S
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Standardbrowser
+setDefaultBrowserMessage=%S er ikke din standardbrowser. Vil du gøre den til din standardbrowser?
+setDefaultBrowserDontAsk=Undersøg altid om %S er standardbrowser ved opstart.
 
 desktopBackgroundLeafNameWin=Skrivebordsbaggrund.bmp
 DesktopBackgroundDownloading=Gemmer billede…
