--- a/da/webapprt/webapprt/overrides/appstrings.properties
+++ b/da/webapprt/webapprt/overrides/appstrings.properties
@@ -14,9 +14,6 @@ confirmRepostPrompt=For at fortsætte skal applikationen sende information, der 
 resendButton.label=Send igen
 unknownSocketType=Applikationen ved ikke, hvordan den skal kommunikere med serveren.
 netReset=Forbindelsen til serveren blev nulstillet, mens siden blev indlæst.
-redirectLoop=En server viderestiller forespørgslen på en måde, der forhindrer den i nogensinde at blive færdig.
-confirmRepostPrompt=For at fortsætte må denne webapplikation sende informationer som gentager en handling (fx en søgning eller ordrebekræftelse) som blev udført tidligere.
-unknownSocketType=Programmet ved ikke, hvordan det skal kommunikere med serveren.
 notCached=Programmet forespurgte et dokument, som ikke længere er tilgængeligt.
 netOffline=Programmet er pt. i offline-tilstand og kan ikke få adgang til nettet.
 isprinting=Dokumentet kan ikke ændres, mens det udskrives eller udskrift forhåndsvises.
@@ -33,6 +30,6 @@ externalProtocolChkMsg=Husk mit valg for alle links af denne type.
 externalProtocolLaunchBtn=Start applikation
 malwareBlocked=Dette websted (%S) er blevet anmeldt som et angrebswebsted og blokeres i overensstemmelse med dine sikkerhedsindstillinger.
 phishingBlocked=Dette websted (%S) er blevet anmeldt som netsvindel og blokerers i overensstemmelse med dine sikkerhedsindstillinger.
-cspFrameAncestorBlocked=Programmet forsøgte at tilgå en ressource med en indholdssikkerhedspolitik, der forhindrer den i at blive indlejret på denne måde.
+cspBlocked=Programmet forsøgte at tilgå en ressource med en indholdssikkerhedspolitik, der forhindrer den i at blive indlæst på denne måde.
 corruptedContentError=Programmet kan ikke fortsætte, da der er fundet en fejl i transmissionen af data.
 remoteXUL=Programmet forsøgte at bruge en ikke-understøttet teknologi som ikke længere er tilgængelig.
