Corrections for New strings for Firefox 1-4

--- a/da/browser/chrome/browser/devtools/timeline.properties
+++ b/da/browser/chrome/browser/devtools/timeline.properties
@@ -38,7 +38,7 @@ timeline.records=OPTAGELSER
 timeline.label.styles=Styles
 timeline.label.reflow=Reflow
 timeline.label.paint=Paint
-timeline.label.javascript=Javascript
+timeline.label.javascript=JavaScript
 timeline.label.domevent=DOM-hændelser
 timeline.label.consoleTime=Konsol
 
@@ -60,7 +60,7 @@ timeline.markerDetail.start=Start:
 timeline.markerDetail.end=Slut:
 timeline.markerDetail.duration=Varighed:
 timeline.markerDetail.consoleTimerName=Navn på timer:
-timeline.markerDetail.DOMEventType=Hændelses-type:
+timeline.markerDetail.DOMEventType=Hændelsestype:
 timeline.markerDetail.DOMEventPhase=Fase:
 timeline.markerDetail.DOMEventTargetPhase=Mål
 timeline.markerDetail.DOMEventCapturingPhase=Capture
