--- a/da/browser/chrome/browser/devtools/toolbox.properties
+++ b/da/browser/chrome/browser/devtools/toolbox.properties
@@ -82,4 +82,4 @@ options.lightTheme.label=Lyst tema
 # LOCALIZATION NOTE (toolbox.noContentProcess.message)
 # Used as a message in the alert displayed when trying to open a browser
 # content toolbox and there is no content process running
-toolbox.noContentProcess.message=Ingen kørende indholds-proces.
+toolbox.noContentProcess.message=Ingen kørende indholdsproces.
