--- a/fr/browser/chrome/browser/devtools/timeline.properties
+++ b/fr/browser/chrome/browser/devtools/timeline.properties
@@ -53,3 +53,15 @@ graphs.memory=Mo
 # %1$S is replaced with one of the above label (timeline.label.*) and %2$S
 # with the details. For examples: Paint (200x100), or console.time (FOO)
 timeline.markerDetailFormat=%1$S (%2$S)
+
+# LOCALIZATION NOTE (time.markerDetail.*):
+# Strings used in the waterfall sidebar.
+timeline.markerDetail.start=Début :
+timeline.markerDetail.end=Fin :
+timeline.markerDetail.duration=Durée :
+timeline.markerDetail.consoleTimerName=Nom du minuteur :
+timeline.markerDetail.DOMEventType=Type d'évènement :
+timeline.markerDetail.DOMEventPhase=Phase :
+timeline.markerDetail.DOMEventTargetPhase=ciblage
+timeline.markerDetail.DOMEventCapturingPhase=capture
+timeline.markerDetail.DOMEventBubblingPhase=bouillonnement
