[browser] Bug 1096310 - Show message after project list load error.

--- a/fr/browser/chrome/browser/devtools/webide.properties
+++ b/fr/browser/chrome/browser/devtools/webide.properties
@@ -42,6 +42,8 @@ error_cantConnectToApp=Connexion à l'application impossible : %1$S
 # Variable: error message (in english)
 error_cantFetchAddonsJSON=Impossible de récupérer la liste des modules : %S
 
+error_appProjectsLoadFailed=Impossible de charger la liste des projets. Cette erreur peut se produire si vous avez utilisé ce profil avec une version plus récente de Firefox.
+
 addons_stable=stable
 addons_unstable=instable
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
