[browser] Bug 1074522 - Implement ellipse()/circle() parsing and style computing

--- a/fr/dom/chrome/layout/css.properties
+++ b/fr/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=saturation
 PEColorLightnessEOF=luminosité
 PEColorOpacityEOF=opacité en valeur de couleur
 PEExpectedNumber=Un nombre était attendu, mais « %1$S » a été trouvé.
+PEPositionEOF=<position>
+PEExpectedPosition=<position> attendue, mais « %1$S » trouvé.
+PEExpectedRadius=Rayon attendu, mais « %1$S » trouvé.
 PEExpectedCloseParen=Parenthèse fermante « ) » attendue, mais « %1$S » trouvé.
 PEDeclEndEOF=« ; » ou « } » pour fermer une déclaration
 PEParseDeclarationNoColon=« : » attendus, mais « %1$S » trouvé.
