[ta] update from Pootle (firefox)

--- a/ta/browser/chrome/browser/devtools/toolbox.properties
+++ b/ta/browser/chrome/browser/devtools/toolbox.properties
@@ -82,3 +82,4 @@ options.lightTheme.label=பிரகாசமான தீம்
 # LOCALIZATION NOTE (toolbox.noContentProcess.message)
 # Used as a message in the alert displayed when trying to open a browser
 # content toolbox and there is no content process running
+toolbox.noContentProcess.message=உள்ளடக்க செயல்பாடு ஏதும் இயங்கவில்லை.
