--- a/ta/browser/chrome/browser/devtools/webconsole.properties
+++ b/ta/browser/chrome/browser/devtools/webconsole.properties
@@ -249,8 +249,11 @@ messageToggleDetails=செய்தி விவரங்களை காண்
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
+emptySlotLabel=#1 வெற்று செருகுவாய்;#1 வெற்று செருகுவாய்கள்
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
+table.index=(அகரவரிசை)
+table.iterationIndex=(மறுசெய்கை அகரவரிசை)
 table.key=விசை
 table.value=மதிப்புகள்
