--- a/ta/browser/chrome/browser/devtools/projecteditor.properties
+++ b/ta/browser/chrome/browser/devtools/projecteditor.properties
@@ -19,6 +19,7 @@ projecteditor.confirmUnsavedTitle=சேமிக்கப்படாத மா
 # LOCALIZATION NOTE (projecteditor.confirmUnsavedLabel):
 # This string is displayed as the message of the confirm prompt that checks
 # to make sure if the project editor can be closed without saving changes
+projecteditor.confirmUnsavedLabel=நீங்கள் வெளியேறினால் சேமிக்காத மாற்றங்கள் காணாமல் போய்விடும். கண்டிப்பாக நீங்க தொடர வேண்டுமா?
 
 # LOCALIZATION NOTE (projecteditor.deleteLabel):
 # This string is displayed as a context menu item for allowing the selected
