--- a/ta/browser/chrome/browser/devtools/timeline.properties
+++ b/ta/browser/chrome/browser/devtools/timeline.properties
@@ -32,6 +32,7 @@ timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.label.*):
 # These strings are displayed in the timeline waterfall, identifying markers.
+timeline.label.styles=பாணிகள்
 timeline.label.consoleTime=பணிமுனை
 
 # LOCALIZATION NOTE (graphs.memory):
