updated latvian translation

--- a/lv/dom/chrome/appstrings.properties
+++ b/lv/dom/chrome/appstrings.properties
@@ -29,7 +29,7 @@ externalProtocolChkMsg=Atcerēties manu izvēli visām šāda veida saitēm.
 externalProtocolLaunchBtn=Palaist programmu
 malwareBlocked=Lietotāji lapu %S ir atzīmējuši kā bīstamu kaitnieku lapu. Balstoties uz jūsu drošības iestatījumiem, šī lapa tika bloķēta.
 phishingBlocked=Lietotāji lapu %S ir atzīmējuši kā krāpnieku lapu, kas radīta, lai izmānītu no tās apmeklētājiem svarīgu personisko vai finanšu informāciju.
-cspFrameAncestorBlocked=īs lapas satura drošības politika liedz to ievietot šeit šādā veidā.
+cspBlocked=Šīs lapas satura drošības politika liedz to ievietot šeit šādā veidā.
 remoteXUL=Šī lapa izmanto neatbalstītu tehnoloģiju, kas pēc noklusējuma vairs nav pieejama Firefox komplektācijā.
 corruptedContentError=Lapu, ko mēģināt apskatīt nevar attēlot datu pārraides kļūdas dēļ.
 notCached=Šis dokuments vairs nav pieejams.
