--- a/lv/dom/chrome/dom/dom.properties
+++ b/lv/dom/chrome/dom/dom.properties
@@ -190,3 +190,4 @@ KeyNameZoomWarning=KeyboardEvent.key vērtība "Zoom" ir novecojusi un tiks pār
 # LOCALIZATION NOTE: Do not translate "KeyboardEvent.key" and "Dead".
 KeyNameDeadKeysWarning=KeyboardEvent.key vērtības, kas sākas ar "Dead" ir novecojušas un tiks pārsauktas par vienkārši "Dead". Papildus informācija pieejama https://developer.mozilla.org/en-US/docs/Web/API/KeyboardEvent.key
 XMLDocumentLoadPrincipalMismatch=document.load izmantošana ir aizliegta dokumentiem no cita loga. Tikai logs, kurā dokuments tika radīts var izsaukt .load šim dokumentam. Ieteicams izmantot XMLHttpRequest.
+IndexedDBTransactionAbortNavigation=Nepabeigta IndexedDB transakcija tika pārtraukta lapas navigācijas dēļ.
