--- a/lv/dom/chrome/layout/css.properties
+++ b/lv/dom/chrome/layout/css.properties
@@ -34,6 +34,9 @@ PESkipRSBraceEOF=nederīgas likumu kopas aizverošā }
 PEImportBadURI=Nederīgs URI @import likumā: '%1$S'.
 PEBadSelectorRSIgnored=Likumu kopa ignorēta slikta selektora dēļ.
 PESelectorListExtraEOF=',' vai '{'
+PEExpectedPosition=Tika gaidīts <position>, bet atrada '%1$S'.
+PEExpectedRadius=Tika gaidīts rādiuss, bet atradās '%1$S'.
+PEPositionEOF=<position>
 PESelectorListExtra=Tika gaidīts ',' vai '{', bet atradās '%1$S'.
 PESelectorGroupNoSelector=Gaidīts selektors.
 PESelectorGroupExtraCombinator=Karājošs kombinators.
