--- a/lv/dom/chrome/security/security.properties
+++ b/lv/dom/chrome/security/security.properties
@@ -13,3 +13,4 @@ LoadingMixedActiveContent=Tiek ielādēts jaukts (nedrošs) aktīvais saturs dro
 LoadingMixedDisplayContent=Tiek ielādēts jaukts (nedrošs) attēlojamais saturs drošā lapā "%1$S"
 InvalidPKPHeaders=Lapa norādīja nepareizu Public-Key-Pins galveni.
 BothAllowScriptsAndSameOriginPresent=iframe ar abiem allow-scripts un allow-same-origin kā tās sandbox atribūtiem var aizvākt sandbox.
+SHA1Sig=Šī lapa izmanto SHA-1 sertifikātu. Ir ieteicams izmantot sertifikātus ar drošākiem šifrēšanas algoritmiem nekā SHA-1.
