[sv-SE] update from Pootle (firefox)

--- a/sv-SE/browser/chrome/browser/loop/loop.properties
+++ b/sv-SE/browser/chrome/browser/loop/loop.properties
@@ -126,6 +126,7 @@ sync_contacts_button=Synkronisera Kontakter
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Tyvärr misslyckades kontaktimporten
+import_failed_support_button=Hjälp
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -283,6 +284,7 @@ feedback_rejoin_button=Gå åter in
 ## an abusive user.
 feedback_report_user_button=Rapportera användare
 
+help_label=Hjälp
 tour_label=Rundtur
 
 ## LOCALIZATION NOTE(rooms_default_room_name_template): {{conversationLabel}}
