--- a/sv-SE/toolkit/chrome/global/aboutTelemetry.properties
+++ b/sv-SE/toolkit/chrome/global/aboutTelemetry.properties
@@ -9,6 +9,7 @@ pageSubtitle = Den här sidan visar information om prestanda, hårdvara, använd
 
 generalDataHeadingName = Namn
 
+generalDataHeadingValue = Värde
 
 slowSqlMain = Långsamma SQL-satser på Main-tråden
 
