--- a/sv-SE/security/manager/chrome/pippki/pippki.properties
+++ b/sv-SE/security/manager/chrome/pippki/pippki.properties
@@ -78,6 +78,7 @@ pageInfo_Privacy_None3=Sidan som visas är inte krypterad.
 # %3$S is protocol version like "SSL 3" or "TLS 1.2"
 pageInfo_EncryptionWithBitsAndProtocol=Anslutning krypterad (%1$S, %2$S bitar, %3$S)
 pageInfo_Privacy_Encrypted1=Sidan som visas krypterades innan den skickades över Internet.
+pageInfo_Privacy_Encrypted2=Kryptering gör det svårt för obehöriga personer att se information som skickas mellan datorer. Det är därför osannolikt att någon läste denna sida när den skickades över nätverket.
 pageInfo_MixedContent=Anslutningen är delvis krypterad
 pageInfo_Privacy_Broken1=Delar av sidan som visas var inte krypterad eller krypteringen är inte tillräckligt stark innan den skickades över internet.
 
