[th] update from Pootle (firefox)

--- a/th/browser/chrome/browser/devtools/toolbox.properties
+++ b/th/browser/chrome/browser/devtools/toolbox.properties
@@ -73,3 +73,7 @@ options.darkTheme.label=ธีมสีมืด
 # LOCALIZATION NOTE (options.lightTheme.label)
 # Used as a label for light theme
 options.lightTheme.label=ธีมสีสว่าง
+
+# LOCALIZATION NOTE (toolbox.noContentProcess.message)
+# Used as a message in the alert displayed when trying to open a browser
+# content toolbox and there is no content process running
