--- a/th/browser/chrome/browser/shellservice.properties
+++ b/th/browser/chrome/browser/shellservice.properties
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = ม
 setDefaultBrowserNever.label       = ไม่ต้องถามฉันอีก
 setDefaultBrowserNever.accesskey   = ม
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=เบราเซอร์ปริยาย
+setDefaultBrowserMessage=ปัจจุบัน %S ไม่ใช่เบราเซอร์ปริยาย คุณต้องการให้โปรแกรมนี้เป็นเบราเซอร์ปริยายหรือไม่
+setDefaultBrowserDontAsk=ตรวจสอบเช่นนี้เสมอเมื่อเริ่ม %S
 
 desktopBackgroundLeafNameWin=ภาพพื้นหลังของพื้นโต๊ะ.bmp
 DesktopBackgroundDownloading=บันทึกรูป…
