--- a/th/browser/chrome/browser/devtools/webide.properties
+++ b/th/browser/chrome/browser/devtools/webide.properties
@@ -22,6 +22,7 @@ project_tab_loading=กำลังโหลด…
 
 # Variable: error message (in english)
 
+
 # LOCALIZATION NOTE (addons_simulator_label): This label is shown as the name of
 # a given simulator version in the "Manage Simulators" pane.  %1$S: Firefox OS
 # version in the simulator, ex. 1.3.  %2$S: Simulator stability label, ex.
@@ -32,3 +33,5 @@ addons_status_installed=ติดตั้งสำเร็จ
 
 
 # Validation status
+
+# Preferences
