--- a/fr/suite/chrome/common/dataman/dataman.properties
+++ b/fr/suite/chrome/common/dataman/dataman.properties
@@ -32,6 +32,7 @@ perm.script.label=Exécuter les scripts
 perm.stylesheet.label=Charger les feuilles de style
 perm.sts/use.label=Utiliser la politique de sécurité Strict Transport Security
 perm.sts/subd.label=Appliquer la politique de sécurité Strict Transport Security aux sous-domaines
+perm.trackingprotection.label=Pister l'activité
 
 perm.type.default=Sélectionnez un type
 
