--- a/fr/suite/chrome/common/notification.properties
+++ b/fr/suite/chrome/common/notification.properties
@@ -11,14 +11,10 @@ carbonfailurepluginsMessage.button.label=Redémarrer en mode 32 bits
 carbonfailurepluginsMessage.button.accesskey=R
 
 missingpluginsMessage.title=Des plugins additionnels sont nécessaires pour afficher tous les éléments de cette page.
-missingpluginsMessage.button.label=Installer les plugins manquants…
-missingpluginsMessage.button.accesskey=I
 
 blockedpluginsMessage.title=Certains plugins nécessaires pour cette page ont été bloqués pour votre protection.
 blockedpluginsMessage.infoButton.label=Détails…
 blockedpluginsMessage.infoButton.accesskey=D
-blockedpluginsMessage.searchButton.label=Mettre à jour les plugins…
-blockedpluginsMessage.searchButton.accesskey=M
 
 crashedpluginsMessage.title=Le plugin %S a planté.
 crashedpluginsMessage.reloadButton.label=Recharger la page
@@ -181,8 +177,10 @@ updatePromptCheckButton.accesskey=c
 SecurityTitle=Avertissement de sécurité
 MixedContentMessage=Vous allez accéder à une page chiffrée qui contient des informations non chiffrées ! Les informations que vous voyez ou saisissez sur cette page pourraient facilement être lues par un tiers.
 MixedActiveContentMessage=Vous allez accéder à une page chiffrée qui contient des informations non sécurisées ! Les informations que vous voyez ou saisissez sur cette page pourraient facilement être lues par un tiers.
+TrackingContentMessage=Certaines parties de cette page pourraient pister votre activité en ligne.
 MixedDisplayContentMessage=Vous allez accéder à une page qui n'est que partiellement chiffrée et n'empêche pas l'espionnage.
 BlockedActiveContentMessage=Les informations non sécurisées ont été bloquées sur cette page.
+BlockedTrackingContentMessage=Les parties de la page qui pistent votre activité en ligne ont été bloquées.
 BlockedDisplayContentMessage=Les informations non chiffrées ont été bloquées sur cette page.
 EnterInsecureMessage=Vous avez quitté une page chiffrée. À partir de maintenant, les informations que vous enverrez et recevrez pourraient éventuellement être lues lors de leur acheminement.
 EnterSecureMessage=Vous allez accéder à une page chiffrée. Le site web s'est correctement identifié, et les informations saisies sur cette page ne pourront pas facilement être lues lors de leur acheminement.
