[sv-SE] update from Pootle (firefox)

--- a/sv-SE/toolkit/chrome/global/aboutSupport.properties
+++ b/sv-SE/toolkit/chrome/global/aboutSupport.properties
@@ -84,3 +84,5 @@ minLibVersions = Förväntad minimiversion
 loadedLibVersions = Version som används
 
 hasSeccompBPF = Seccomp-BPF (Systemanropsfiltrering)
+canSandboxContent = Sandboxa innehållsprocess
+canSandboxMedia = Sandboxa media-plugin
