Fixes for Firefox 35

--- a/pt-BR/browser/chrome/browser/browser.properties
+++ b/pt-BR/browser/chrome/browser/browser.properties
@@ -104,6 +104,8 @@ badContentBlocked.blocked.message=O %S está bloqueando conteúdo nesta página.
 badContentBlocked.notblocked.message=O %S não está bloqueando nenhum conteúdo nesta página.
 
 crashedpluginsMessage.title=O plugin %S travou.
+crashedpluginsMessage.reloadButton.label=Reload page
+crashedpluginsMessage.reloadButton.accesskey=R
 crashedpluginsMessage.submitButton.label=Enviar um relatório de travamento
 crashedpluginsMessage.submitButton.accesskey=E
 crashedpluginsMessage.learnMore=Saiba mais…
@@ -117,6 +119,7 @@ keywordURIFixup.message=Você estava tentando abrir %S?
 keywordURIFixup.goTo=Sim, abra %S
 keywordURIFixup.goTo.accesskey=S
 keywordURIFixup.dismiss=Não, obrigado
+keywordURIFixup.dismiss.accesskey=N
 
 ## Plugin doorhanger strings
 # LOCALIZATION NOTE (pluginActivateNew.message): Used for newly-installed
@@ -152,9 +155,13 @@ pluginInfo.unknownPlugin=Desconhecido
 # LOCALIZATION NOTE (pluginActivateNow.label): This button will enable the
 # plugin in the current session for an short time (about an hour), auto-renewed
 # if the site keeps using the plugin.
+pluginActivateNow.label=Allow Now
+pluginActivateNow.accesskey=N
 # LOCALIZATION NOTE (pluginActivateAlways.label): This button will enable the
 # plugin for a long while (90 days), auto-renewed if the site keeps using the
 # plugin.
+pluginActivateAlways.label=Allow and Remember
+pluginActivateAlways.accesskey=R
 pluginBlockNow.label=Bloquear plugin
 pluginBlockNow.accesskey=B
 pluginContinue.label=Continuar permitindo
@@ -170,6 +177,8 @@ pluginContinueBlocking.label=Continuar bloqueando
 pluginContinueBlocking.accesskey=b
 # LOCALIZATION NOTE (pluginActivateTrigger): Use the unicode ellipsis char, \u2026,
 # or use "..." if \u2026 doesn't suit traditions in your locale.
+pluginActivateTrigger.label=Allow…
+pluginActivateTrigger.accesskey=A
 
 # Sanitize
 # LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
@@ -193,6 +202,8 @@ sanitizeSelectedWarning=Todos os itens selecionados serão limpos.
 
 # LOCALIZATION NOTE (downloadAndInstallButton.label): %S is replaced by the
 # version of the update: "Update to 28.0".
+update.downloadAndInstallButton.label=Update to %S
+update.downloadAndInstallButton.accesskey=U
 
 # RSS Pretty Print
 feedShowFeedNew=Inscrever “%S”…
@@ -350,8 +361,14 @@ pointerLock.autoLock.title2=O %S ocultará o ponteiro.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
 # The two button strings will never be shown at the same time, so
 # it's okay for them to have the same access key
+safebrowsing.getMeOutOfHereButton.label=Get me out of here!
+safebrowsing.getMeOutOfHereButton.accessKey=G
 safebrowsing.reportedWebForgery=Página avaliada como falsa!
+safebrowsing.notAForgeryButton.label=This isn't a web forgery…
+safebrowsing.notAForgeryButton.accessKey=F
 safebrowsing.reportedAttackSite=Página avaliada como foco de ataques!
+safebrowsing.notAnAttackButton.label=This isn't an attack site…
+safebrowsing.notAnAttackButton.accessKey=A
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
@@ -415,6 +432,8 @@ syncPromoNotification.addons-sync-disabled.description=Você pode usar sua conta
 
 # Mozilla data reporting notification (Telemetry, Firefox Health Report, etc)
 dataReportingNotification.message       = O %1$S automaticamente envia alguns dados para a %2$S de forma que possamos aprimorar sua experiência.
+dataReportingNotification.button.label  = Choose What I Share
+dataReportingNotification.button.accessKey  = C
 
 # Webapps notification popup
 webapps.install = Instalar
@@ -443,6 +462,8 @@ service.toolbarbutton.tooltiptext=Serviços
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
 service.install.description=Deseja ativar serviços do %1$S para exibição nas barras de ferramentas e painéis do %2$S?
+service.install.ok.label=Enable Services
+service.install.ok.accesskey=E
 
 # LOCALIZATION NOTE (social.markpageMenu.label): %S is the name of the social provider
 social.markpageMenu.label=Salvar página no %S
@@ -453,6 +474,8 @@ social.marklinkMenu.label=Salvar link no %S
 social.error.message=O %1$S está impossibilitado de conectar-se com o %2$S neste momento.
 social.error.tryAgain.label=Tentar de novo
 social.error.tryAgain.accesskey=T
+social.error.closeSidebar.label=Close This Sidebar
+social.error.closeSidebar.accesskey=C
 
 # LOCALIZATION NOTE: %1$S is the label for the toolbar button, %2$S is the associated badge numbering that the social provider may provide.
 social.aria.toolbarButtonBadgeText=%1$S (%2$S)
@@ -463,6 +486,8 @@ identity.privacyPolicy = Política de privacidade
 # LOCALIZATION NOTE (identity.chooseIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.chooseIdentity.description = Identificar-se no %S
 identity.chooseIdentity.label = Usar um email existente
+identity.newIdentity.label = Use a different email
+identity.newIdentity.accessKey = e
 identity.newIdentity.email.placeholder = Email
 # LOCALIZATION NOTE (identity.newIdentity.description): %S is the website origin (e.g. https://www.mozilla.org) shown in popup notifications.
 identity.newIdentity.description = Forneça seu endereço de email para identificar-se em %S
@@ -471,6 +496,8 @@ identity.next.accessKey = A
 # LOCALIZATION NOTE: shown in the popup notification when a user successfully logs into a website
 # LOCALIZATION NOTE (identity.loggedIn.description): %S is the user's identity (e.g. user@example.com)
 identity.loggedIn.description = Identificado como: %S
+identity.loggedIn.signOut.label = Sign Out
+identity.loggedIn.signOut.accessKey = O
 
 # LOCALIZATION NOTE (getUserMedia.shareCamera.message, getUserMedia.shareMicrophone.message,
 #                    getUserMedia.shareScreen.message, getUserMedia.shareCameraAndMicrophone.message,
@@ -481,6 +508,12 @@ getUserMedia.shareMicrophone.message = Deseja compartilhar seu microfone com %S?
 getUserMedia.shareScreen.message = Deseja compartilhar sua tela com %S?
 getUserMedia.shareCameraAndMicrophone.message = Deseja compartilhar sua câmera e seu microfone com %S?
 getUserMedia.shareScreenAndMicrophone.message = Deseja compartilhar seu microfone e sua tela com %S?
+getUserMedia.selectWindow.label=Window to share:
+getUserMedia.selectWindow.accesskey=W
+getUserMedia.selectScreen.label=Screen to share:
+getUserMedia.selectScreen.accesskey=S
+getUserMedia.selectApplication.label=Application to share:
+getUserMedia.selectApplication.accesskey=A
 getUserMedia.noVideo.label = Sem vídeo
 getUserMedia.noApplication.label = Nenhum aplicativo
 getUserMedia.noScreen.label = Nenhuma tela
@@ -497,17 +530,31 @@ getUserMedia.shareApplicationWindowCount.label=#1 (#2 janela);#1 (#2 janelas)
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
+getUserMedia.shareSelectedDevices.label = Share Selected Device;Share Selected Devices
+getUserMedia.shareSelectedDevices.accesskey = S
 getUserMedia.shareScreen.label = Compartilhar tela
 getUserMedia.shareApplication.label = Compartilhar aplicativo selecionado
 getUserMedia.shareWindow.label = Compartilhar janela selecionada
 getUserMedia.shareSelectedItems.label = Compartilhar itens selecionados
+getUserMedia.always.label = Always Share
+getUserMedia.always.accesskey = A
+getUserMedia.denyRequest.label = Don't Share
+getUserMedia.denyRequest.accesskey = D
+getUserMedia.never.label = Never Share
+getUserMedia.never.accesskey = N
 getUserMedia.sharingCamera.message2 = Você está compartilhando sua câmera com esta página.
 getUserMedia.sharingMicrophone.message2 = Você está compartilhando seu microfone com esta página.
 getUserMedia.sharingCameraAndMicrophone.message2 = Você está compartilhando sua câmera e seu microfone com esta página.
 getUserMedia.sharingApplication.message = Você está compartilhando um aplicativo com esta página.
 getUserMedia.sharingScreen.message = Você está compartilhando sua tela com esta página.
 getUserMedia.sharingWindow.message = Você está compartilhando uma janela com esta página.
+getUserMedia.continueSharing.label = Continue Sharing
+getUserMedia.continueSharing.accesskey = C
+getUserMedia.stopSharing.label = Stop Sharing
+getUserMedia.stopSharing.accesskey = S
 
+getUserMedia.sharingMenu.label = Tabs sharing devices
+getUserMedia.sharingMenu.accesskey = d
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -545,6 +592,10 @@ getUserMedia.sharingMenuUnknownHost = Origem desconhecida
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = O %S aparenta iniciar… muito… lentamente.
+slowStartup.helpButton.label = Learn How to Speed It Up
+slowStartup.helpButton.accesskey = L
+slowStartup.disableNotificationButton.label = Don't Tell Me Again
+slowStartup.disableNotificationButton.accesskey = A
 
 
 # LOCALIZATION NOTE(customizeTips.tip0): %1$S will be replaced with the text defined
