--- a/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
+++ b/pt-BR/security/manager/chrome/pipnss/nsserrors.properties
@@ -122,8 +122,18 @@ SSL_ERROR_NEXT_PROTOCOL_DATA_INVALID=SSL received invalid NPN extension data.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SSL2=Recurso do SSL não suportado em conexões SSL 2.0.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_SERVERS=Recurso do SSL não suportado em servidores.
 SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_CLIENTS=Recurso do SSL não suportado em clientes.
+SSL_ERROR_INVALID_VERSION_RANGE=SSL version range is not valid.
+SSL_ERROR_CIPHER_DISALLOWED_FOR_VERSION=SSL peer selected a cipher suite disallowed for the selected protocol version.
+SSL_ERROR_RX_MALFORMED_HELLO_VERIFY_REQUEST=SSL received a malformed Hello Verify Request handshake message.
+SSL_ERROR_RX_UNEXPECTED_HELLO_VERIFY_REQUEST=SSL received an unexpected Hello Verify Request handshake message.
+SSL_ERROR_FEATURE_NOT_SUPPORTED_FOR_VERSION=SSL feature not supported for the protocol version.
+SSL_ERROR_RX_UNEXPECTED_CERT_STATUS=SSL received an unexpected Certificate Status handshake message.
+SSL_ERROR_UNSUPPORTED_HASH_ALGORITHM=Unsupported hash algorithm used by TLS peer.
 SSL_ERROR_DIGEST_FAILURE=A função Digest falhou.
 SSL_ERROR_INCORRECT_SIGNATURE_ALGORITHM=Algoritmo de assinatura incorreto especificado em um elemento assinado digitalmente.
+SSL_ERROR_NEXT_PROTOCOL_NO_CALLBACK=The next protocol negotiation extension was enabled, but the callback was cleared prior to being needed.
+SSL_ERROR_NEXT_PROTOCOL_NO_PROTOCOL=The server supports no protocols that the client advertises in the ALPN extension.
+SSL_ERROR_INAPPROPRIATE_FALLBACK_ALERT=The server rejected the handshake because the client downgraded to a lower TLS version than the server supports.
 SEC_ERROR_IO=Ocorreu um erro de I/O durante a autorização de segurança.
 SEC_ERROR_LIBRARY_FAILURE=falha na biblioteca de segurança.
 SEC_ERROR_BAD_DATA=biblioteca de segurança: recebidos dados incorretos.
