--- a/pt-BR/browser/chrome/browser/loop/loop.properties
+++ b/pt-BR/browser/chrome/browser/loop/loop.properties
@@ -10,6 +10,8 @@ clientShortname2=Firefox Hello
 
 ## LOCALIZATION_NOTE(first_time_experience.title): clientShortname will be
 ## replaced by the brand name
+first_time_experience_title={{clientShortname}} — Join the conversation
+first_time_experience_button_label=Get Started
 
 share_link_header_text=Compartilhe este link para convidar alguém para conversar:
 invite_header_text=Convide alguém para se juntar a você.
@@ -60,8 +62,10 @@ problem_accessing_account=Houve um problema ao acessar sua conta
 ## See https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error for location
 retry_button=Tentar de novo
 
+share_email_subject4={{clientShortname}} — Join the conversation
 ## LOCALIZATION NOTE (share_email_body4): In this item, don't translate the
 ## part between {{..}} and leave the \r\n\r\n part alone
+share_email_body4=Hello!\r\n\r\nJoin me for a video conversation using {{clientShortname}}:\r\n\r\nYou don't have to download or install anything. Just copy and paste this URL into your browser:\r\n\r\n{{callUrl}}\r\n\r\nIf you want, you can also learn more about {{clientShortname}} at {{learnMoreUrl}}\r\n\r\nTalk to you soon!
 share_button=Email
 share_button2=Enviar link por email
 copy_url_button=Copiar
@@ -95,6 +99,7 @@ new_contact_name_placeholder=Nome
 new_contact_email_placeholder=Email
 new_contact_phone_placeholder=Telefone Firefox OS
 
+contacts_blocked_contacts=Blocked Contacts
 
 ## LOCALIZATION NOTE (add_contact_button):
 ## This is the button to actually add the new contact
@@ -185,6 +190,7 @@ initiate_call_button_label2=Pronto para iniciar a conversa?
 incoming_call_title2=Pedido de conversa
 incoming_call_accept_button=Aceitar
 incoming_call_accept_audio_only_tooltip=Aceitar com voz
+incoming_call_accept_audio_video_tooltip=Accept with video
 incoming_call_cancel_button=Cancelar
 incoming_call_cancel_and_block_button=Cancelar e bloquear
 incoming_call_block_button=Bloquear
@@ -251,12 +257,14 @@ connection_error_see_console_notification=Falha na chamada; veja o console para 
 ## from legal_text_tos and legal_text_privacy. clientShortname will be replaced
 ## by the brand name.
 legal_text_and_links3=Ao usar o {{clientShortname}} você concorda com os {{terms_of_use}} e o {{privacy_notice}}.
+
 legal_text_tos = termos de uso
 legal_text_privacy = aviso de privacidade
 
 ## LOCALIZATION NOTE (powered_by_beforeLogo, powered_by_afterLogo):
 ## These 2 strings are displayed before and after a 'Telefonica'
 ## logo.
+powered_by_beforeLogo=Powered by
 powered_by_afterLogo=
 
 feedback_call_experience_heading2=Como foi sua conversa?
@@ -300,6 +308,7 @@ rooms_list_current_conversations=Conversa atual;Conversas atuais
 rooms_list_delete_tooltip=Excluir conversa
 rooms_list_deleteConfirmation_label=Tem certeza?
 rooms_list_no_current_conversations=Nenhuma conversa atual
+rooms_name_this_room_label=Name this conversation
 rooms_new_room_button_label=Iniciar uma conversa
 rooms_only_occupant_label=Você é o primeiro aqui.
 rooms_panel_title=Escolha uma conversa ou comece uma nova
@@ -307,3 +316,4 @@ rooms_room_full_label=Já há duas pessoas nesta conversa.
 rooms_room_full_call_to_action_nonFx_label=Baixe o {{brandShortname}} para iniciar o seu próprio
 rooms_room_full_call_to_action_label=Saiba mais sobre o {{clientShortname}} »
 rooms_room_joined_label=Alguém entrou na conversa!
+rooms_room_join_label=Join the conversation
