Use https version of Google Translate

--- a/pl/suite/chrome/browser/region.properties
+++ b/pl/suite/chrome/browser/region.properties
@@ -9,7 +9,7 @@
 browser.startup.homepage=http://www.seamonkey.pl/start/
 browser.throbber.url=http://www.seamonkey.pl/
 
-browser.translation.service=http://translate.google.com/translate?prev=/language_tools&u=
+browser.translation.service=https://translate.google.com/translate?prev=/language_tools&u=
 browser.translation.serviceDomain=translate.google.com
 browser.validate.html.service=http://validator.w3.org/check?charset=%28detect+automatically%29&doctype=Inline&uri=
 
