--- a/pl/suite/chrome/common/dataman/dataman.properties
+++ b/pl/suite/chrome/common/dataman/dataman.properties
@@ -30,8 +30,7 @@ perm.plugins.label=Aktywowanie wtyczek
 perm.popup.label=Otwieranie wyskakujących okien
 perm.script.label=Uruchamianie skryptów
 perm.stylesheet.label=Wczytywanie arkuszy stylów
-perm.sts/use.label=Używaj ścisłego bezpieczeństwa podczas transportu
-perm.sts/subd.label=Stosuj ścisłe bezpieczeństwo podczas transportu dla poddomen
+perm.trackingprotection.label=Śledzenie użytkownika
 
 perm.type.default=Wybierz rodzaj
 
