L10n for: Bug 1078740 Add tracking controls to security notification bar AND Bug 1101978 Remove unused strings

--- a/pl/suite/chrome/common/notification.properties
+++ b/pl/suite/chrome/common/notification.properties
@@ -16,14 +16,10 @@ carbonfailurepluginsMessage.button.label=Uruchom ponownie w trybie 32-bitowym
 carbonfailurepluginsMessage.button.accesskey=U
 
 missingpluginsMessage.title=Aby wyświetlić pełną zawartość tej strony, potrzebne są dodatkowe wtyczki.
-missingpluginsMessage.button.label=Zainstaluj brakujące wtyczki…
-missingpluginsMessage.button.accesskey=w
 
 blockedpluginsMessage.title=Niektóre wtyczki wymagane do wyświetlenia tej strony zostały zablokowane z przyczyn bezpieczeństwa.
 blockedpluginsMessage.infoButton.label=Szczegóły…
 blockedpluginsMessage.infoButton.accesskey=S
-blockedpluginsMessage.searchButton.label=Aktualizuj wtyczki…
-blockedpluginsMessage.searchButton.accesskey=A
 
 crashedpluginsMessage.title=Wtyczka %S uległa awarii.
 crashedpluginsMessage.reloadButton.label=Odśwież stronę
@@ -184,8 +180,10 @@ updatePromptCheckButton.accesskey=S
 SecurityTitle=Ostrzeżenie bezpieczeństwa
 MixedContentMessage=Połączenie z szyfrowaną stroną zawierającą niezaszyfrowane informacje. Informacje widoczne jak i wprowadzane na tej stronie mogą być łatwo przechwytywane przez osoby trzecie.
 MixedActiveContentMessage=Połączenie z szyfrowaną stroną zawierającą niezabezpieczone informacje. Informacje widoczne jak i wprowadzane na tej stronie mogą być łatwo przechwytywane przez osoby trzecie.
+TrackingContentMessage=Części tej strony mogą śledzić aktywność użytkownika.
 MixedDisplayContentMessage=Połączenie z tą stroną jest tylko częściowo szyfrowane, co nie zabezpiecza przed podsłuchiwaniem.
 BlockedActiveContentMessage=Niezabezpieczone informacje na tej stronie zostały zablokowane.
+BlockedTrackingContentMessage=Części strony odpowiedzialne za śledzenie aktywności użytkownika zostały zablokowane.
 BlockedDisplayContentMessage=Niezaszyfrowane informacje na tej stronie zostały zablokowane.
 EnterInsecureMessage=Połączenie szyfrowane zakończone. Informacje widoczne jak i wprowadzane od tego momentu mogą być łatwo przechwytywane przez osoby trzecie.
 EnterSecureMessage=Połączenie z tą stroną jest szyfrowane. Witryna przesłała poprawne dane identyfikacyjne, przez co informacje widoczne bądź wprowadzane na tej stronie nie mogą być w łatwy sposób przechwytywane przez osoby trzecie.
